// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CRS utilities crsStatusCard returns a status card for a NOT_ELIGIBLE CRS service result 1`] = `
{
  "details": undefined,
  "heading": "Commissioned Rehabilitative Services (CRS)",
  "hint": "No referral needed for accommodation.
You can still complete a CRS for other requirements.",
  "inactive": true,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Not eligible",
  },
}
`;

exports[`CRS utilities crsStatusCard returns a status card for a NOT_REQUIRED CRS service result 1`] = `
{
  "details": undefined,
  "heading": "Commissioned Rehabilitative Services (CRS)",
  "hint": undefined,
  "inactive": true,
  "links": undefined,
  "status": {
    "colour": "grey",
    "text": "Not required",
  },
}
`;

exports[`CRS utilities crsStatusCard returns a status card for a NOT_STARTED CRS service result 1`] = `
{
  "details": undefined,
  "heading": "Commissioned Rehabilitative Services (CRS)",
  "hint": "No open CRS accommodation referral.",
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/start",
      "text": "Start referral",
    },
  ],
  "status": {
    "colour": "orange",
    "text": "Not started",
  },
}
`;

exports[`CRS utilities crsStatusCard returns a status card for a SUBMITTED CRS service result 1`] = `
{
  "details": [
    {
      "key": {
        "text": "Submitted",
      },
      "value": {
        "text": "6 June 2026 (3 days ago)",
      },
    },
  ],
  "heading": "Commissioned Rehabilitative Services (CRS)",
  "hint": undefined,
  "inactive": false,
  "links": [
    {
      "external": true,
      "href": "https://example.com/view-referral",
      "text": "View referral",
    },
  ],
  "status": {
    "colour": "yellow",
    "text": "Submitted",
  },
}
`;

exports[`CRS utilities crsStatusCard returns a status card for a UPCOMING CRS service result 1`] = `
{
  "details": undefined,
  "heading": "Commissioned Rehabilitative Services (CRS)",
  "hint": "Start referral from 25 March 2027 (in 289 days).",
  "inactive": false,
  "links": undefined,
  "status": {
    "colour": "yellow",
    "text": "Upcoming",
  },
}
`;
